# personal_site

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: handlers.rs  lib.rs  main.rs  models.rs  utils.rs
backend/src/utils/: mod.rs
backend/tests/: README.md  admin_test.rs  content_test.rs  github_test.rs  health_test.rs  integration_test.rs  simple_test.rs  working_test.rs
backend/tests/common/: mod.rs
content/blog/: sample-blog.md  title1.md  title2.md
content/github/: config.yaml
content/project/: claude_implementation_guide.md  project1.md  project2.md  sample-project.md
frontend/: .dockerignore  Dockerfile  README.md  astro.config.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/playwright-report/: index.html
frontend/src/components/: Card.astro  CardInteractions.astro  CardStack.astro  (+8 more)
frontend/tests/: card-display-tests.spec.ts  cardstack-interactions.spec.ts  debug-cardstack-clicks.spec.ts  github-cards.spec.ts  theme-toggle.spec.ts
temp/: README.md  reference.html
tests/: test-browser-download-debug.js  test-debug-theme-switching.js  test-download-fix.js  test-dynamic-theme-switching.js  test-file-management.js  test-file-viewer-fixed.js  test-file-viewer.js  test-modal-debug.js  test-redirect.js  test-rename-specific.js  test-theme-functionality.js  test-theme-placeholder.js
tests/api_tests/: file-operations-api.test.js
(+6 files in other folders)
