[package]
name = "portfolio-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
pulldown-cmark = "0.9"
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "8"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
env_logger = "0.10"
base64 = "0.21"
regex = "1.7"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "portfolio-backend"
path = "src/main.rs"

[lib]
name = "portfolio_backend"
path = "src/lib.rs"